# BitBrain

./: .gitignore  README.md  pictures.py  pictures_more.py  zhihu.py
Basic/5.编程语言/C++/JNI/code/cpp_project/: CMakeLists.txt
Basic/5.编程语言/C++/JNI/code/cpp_project/include/: c_api.h  com_Student.h  student.h
Basic/5.编程语言/C++/JNI/code/cpp_project/jni_impl/: jni_impl.cpp
Basic/5.编程语言/C++/JNI/code/cpp_project/src/: c_api.cpp
Basic/5.编程语言/C++/JNI/code/java_project/: com_Student.h
Basic/5.编程语言/C++/JNI/code/java_project/com/: Student.java  StudentInfo.java  Test.java
Basic/C++/JNI/code/cpp_project/: build.sh
Basic/C++/JNI/code/cpp_project/src/: student.cpp
Basic/C++/JNI/code/cpp_project/test/: main.cpp
Basic/C++/JNI/code/java_project/: com_Student.h  run.sh
Basic/C++/JNI/code/java_project/com/: Test.java
ToDoList/: 1.py
Tools/: ssh免密登录配置.md
Tools/常用Python脚本/: 进程资源占用监控.py
Tools/网络爬虫Demo/: zhihu.py
